--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,8 @@ body {
 }
 
 .header {
+    width: 100%;
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    display: flex;
     margin-top: 20px;
 }
 
@@ -30,7 +27,7 @@ body {
     margin: 0 auto;
     background-color: var(--controle);
     height: 160px;
-    width: 510px;
+    width: 30%;
     border-radius: 160px;
     justify-content: center;
     box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
@@ -99,6 +96,7 @@ main {
 }
 
 .niveis {
+    width: 100%;
     flex: 1.5;
     text-align: center;
     align-items: center;
@@ -222,7 +220,7 @@ li {
     flex: 1;
     text-align: center;
     align-items: center;
-    
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -245,11 +243,17 @@ li {
     border-radius: 30px;
     border: none;
     cursor: pointer;
-    background-image: url('/assets/fundox.png');
+    background-image: url('fundox.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #abrir-modal:hover {
-    background-image: url('/assets/fundo2x.png');
+    background-image: url('fundo2x.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: block;
 }
 
@@ -322,9 +326,18 @@ li {
 }
 
 @media only screen and (max-width: 1050px) {
-    main {
-        display: block;
+    * {
         align-items: center;
-        justify-content: center;
+    }
+    .header {
+        width: 100%;
+        padding-left: 0;
+    }
+    .controle {
+        width: 90%;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
     }
 }
