--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,9 @@ body {
     flex-direction: row;
     margin: 0 auto;
     background-color: var(--controle);
-    height: 160px;
-    width: 510px;
-    border-radius: 160px;
+    height: 140px;
+    width: 470px;
+    border-radius: 140px;
     justify-content: center;
     box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
     border: 1px solid #14c8ff;
@@ -109,7 +109,7 @@ main {
 
 .titulo {
     width: 60%;
-    height: 60px;
+    height: 50px;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -122,13 +122,13 @@ main {
 }
 
 .titulo h1 {
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'VT323', monospace;
     color: #15b6e6;
 }
 
 .selecao {
-    margin-top: 30px;
+    margin-top: 25px;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -136,8 +136,8 @@ main {
     flex-direction: column;
     background-color: rgb(218, 217, 217);
     width: 90%;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 5px;
     box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
 }
@@ -171,11 +171,11 @@ li {
 }
 
 .botao button {
-    background-color: #cc4385;
+    background-color: #2a245e;
     font-family: 'VT323', monospace;
     font-size: xx-large;
-    color: #ff71b6;
-    padding: 15px 25px;
+    color: #5648d0;
+    padding: 10px 20px;
     border: none;
     cursor: pointer;
     border-radius: 100%;
@@ -189,7 +189,7 @@ li {
 
 .botao2 {
     padding: 5px;
-    background-color: #cc4385;
+    background-color: #2a245e;
     border-radius: 20px;
 }
 
@@ -198,24 +198,25 @@ li {
     font-family: 'VT323', monospace;
     font-size: xx-large;
     color: #59d7fe;
-    padding: 15px 25px;
+    padding: 10px 20px;
     border: none;
     cursor: pointer;
     border-radius: 100%;
-    border: 2px solid #ff54a7;
+    border: 2px solid #5648d0;
 }
   
 .botao2 button:hover {
-    color: #cc4385;
+    color: #5648d0;
     transform: scale(1.2);
 }
 
 .robo {
     flex: 1;
+    align-items: center;
 }
 
 .robo img {
-    width: 100%;
+    width:70%;
 }
 
 .ajuda {
