--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     display: flex;
     margin-top: 20px;
+    width: 100%;
 }
 
 .controle {
@@ -30,7 +31,7 @@ body {
     margin: 0 auto;
     background-color: var(--controle);
     height: 140px;
-    width: 470px;
+    width: 30%;
     border-radius: 140px;
     justify-content: center;
     box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
@@ -136,6 +137,8 @@ main {
     flex-direction: column;
     background-color: rgb(218, 217, 217);
     width: 90%;
+    padding-left: 5px;
+    padding-right: 5px;
     padding-top: 10px;
     padding-bottom: 5px;
     box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
@@ -219,97 +222,6 @@ li {
     width:70%;
 }
 
-.ajuda {
-    flex: 1;
-    text-align: center;
-    align-items: center;
-    
-    display: flex;
-    flex-direction: column;
-}
-
-.video {
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-}
-
-#abrir-modal {
-    box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.3);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 80%;
-    height: 28.2vh;
-    border-radius: 30px;
-    border: none;
-    cursor: pointer;
-    background-image: url('/assets/fundox.png');
-}
-
-#abrir-modal:hover {
-    background-image: url('/assets/fundo2x.png');
-    display: block;
-}
-
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    padding-top: 0;
-}
-  
-.modal-conteudo {
-    position: relative;
-    text-align: end;
-}
-  
-.fechar {
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    z-index: 1;
-}
-  
-.fechar:hover {
-    color: #f5ae14;
-}
-  
-.modal-video {
-    max-width: 100%;
-    max-height: 100%;
-}
-  
-.modal-overlay {
-    position: fixed;
-    z-index: 998;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-  
-.fundo-modal {
-    position: fixed;
-    z-index: 998;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: none;
-}
-
 .wave {
     display: inline-block;
     animation: wave-animation 1s infinite;
@@ -323,9 +235,21 @@ li {
 }
 
 @media only screen and (max-width: 1050px) {
-    main {
-        display: block;
+    * {
         align-items: center;
-        justify-content: center;
+    }
+    .header {
+        width: 100%;
+        padding-left: 0;
+    }
+    .controle {
+        width: 90%;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+    }
+    .robo {
+        margin-top: 20px;
     }
 }
